force-app/main/default/objects/TR_C360_Field_Mapping__mdt/TR_C360_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>C360 Field Mapping</label>
    <pluralLabel>C360 Fields Mapping</pluralLabel>
</CustomObject>