force-app/main/default/objects/TR_C360_Field_Mapping__mdt/fields/C360_Field__c.field-meta.xml
<CustomField>
    <fullName>C360_Field__c</fullName>
    <label>C360 Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>