force-app/main/default/objects/TR_C360_Field_Mapping__mdt/fields/Is_From_C360__c.field-meta.xml
<CustomField>
    <fullName>Is_From_C360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From C360</label>
    <type>Checkbox</type>
</CustomField>