force-app/main/default/objects/TR_C360_Field_Mapping__mdt/fields/SF_Field__c.field-meta.xml
<CustomField>
    <fullName>SF_Field__c</fullName>
    <label>SF_Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>