force-app/main/default/objects/TR_C360_Field_Mapping__mdt/fields/SF_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>SF_ObjectName__c</fullName>
    <label>SF_ObjectName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>