force-app/main/default/objects/TR_C360_Field_Mapping__mdt/fields/Type_of_Field__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Field__c</fullName>
    <label>Type of Field</label>
    <length>10</length>
    <type>Text</type>
</CustomField>