force-app/main/default/objects/TR_C360_Field_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>C360_Field__c</columns>
    <columns>Is_From_C360__c</columns>
    <columns>SF_Field__c</columns>
    <columns>Is_Active__c</columns>
    <columns>SF_ObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>